--- a/src/App.css
+++ b/src/App.css
@@ -119,12 +119,15 @@ body {
   font-family: var(--font-family);
   font-size: var(--font-size);
 }
+main {
+  padding: 1.5rem;
+}
 
 button {
   min-width: 110px;
   width: fit-content;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.8rem;
   padding: 12px 16px;
   border: none;
   border-radius: 24px;
