--- a/src/App.css
+++ b/src/App.css
@@ -157,8 +157,8 @@ img[role="button"] svg[role="button"] {
 }
 
 .textTitle {
-  font-size: 1.7rem;
-  font-weight: 600;
+  font-size: 2.2rem;
+  font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
