added modal context

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 /* #region General reset */
-
-/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
+/* Box sizing rules */
 
 /* Prevent font size inflation */
 html {
@@ -202,6 +202,7 @@ label[for="password"] {
 input,
 textarea {
   width: 100%;
+  font-size: 1.5rem;
   font-weight: 600;
   padding: 1.1rem 0.7rem;
   border: 2px solid;
