--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
+  padding: 2.5rem;
 }
 
 .titleWrapper h1 {
@@ -68,6 +68,7 @@
   min-height: 300px;
   padding-block: 1rem 2rem;
   background-color: var(--color-background);
+  box-shadow: 0px 14px 9px -11px rgba(0, 0, 0, 0.1);
 }
 
 .flex {
@@ -91,13 +92,18 @@
   box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
+.username {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
 .grid {
   display: grid;
 }
 @media screen and (width >= 768px) {
   .header {
     display: flex;
-    padding: 1rem 1.5rem 1rem 3rem;
+    padding: 1.7rem 1.5rem 1.7rem 4rem;
     justify-content: space-between;
     align-items: center;
   }
