--- a/src/components/AuthForm/styles.module.css
+++ b/src/components/AuthForm/styles.module.css
@@ -10,7 +10,6 @@
   padding: 2rem;
   place-items: center;
   display: grid;
-  /* grid-auto-rows: min-content; */
   grid-template-rows: min-content min-content 1fr 70px 1fr;
 }
 
@@ -24,11 +23,11 @@
   margin-top: 4rem;
 }
 
-.authForm label {
+.modalForm label {
   margin-top: 5rem;
 }
 
-.authForm > input,
+.modalForm > input,
 .passwordWrapper {
   min-width: 24.5rem;
 }
@@ -69,7 +68,7 @@
     margin-bottom: 5.6rem;
   }
 
-  .authForm {
+  .modalForm {
     display: grid;
     grid-template-columns: auto 1fr;
     place-items: center;
@@ -77,7 +76,7 @@
     row-gap: 3.7rem;
   }
 
-  .authForm label {
+  .modalForm label {
     margin: 0;
     font-size: 2rem;
   }
