--- a/src/components/Categories/styles.module.css
+++ b/src/components/Categories/styles.module.css
@@ -25,6 +25,9 @@
 }
 
 @media screen and (width > 768px) {
+  .wrapper {
+    margin-bottom: 5rem;
+  }
   .category {
     min-width: 23.5rem;
     height: 23.5rem;
