--- a/src/components/Section/styles.module.css
+++ b/src/components/Section/styles.module.css
@@ -1,10 +1,15 @@
 .wrapper {
   margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
 }
 
-.wrapper > h2 {
-  text-align: center;
-  margin-block: 3rem;
+.wrapper > h1 {
+  font-size: 3rem;
+  font-weight: bold;
 }
 
 .storiesWrapper {
@@ -12,9 +17,21 @@
   gap: 2rem;
 }
 
+.noStories {
+  display: grid;
+  place-items: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: var(--color-textMid);
+  min-height: 200px;
+}
+
 @media screen and (width >= 768px) {
   .storiesWrapper {
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
     gap: 3rem;
+  }
+  .noStories {
+    min-height: 300px;
   }
 }
