--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -1,5 +1,10 @@
 .wrapper {
-  background-color: lightseagreen;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0.09) 50%,
+    rgba(0, 0, 0, 0.85) 75%
+  );
   max-width: 39.8rem;
   min-height: 58.65rem;
   padding: 3rem;
