--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -12,12 +12,15 @@
   align-items: center;
   justify-content: center;
   border-radius: 1.6rem;
+
+  position: relative;
 }
 
 .detail {
   width: 100%;
   color: var(--color-textLight);
   margin-top: auto;
+  margin-bottom: 0.5rem;
 }
 
 .detail > h3 {
@@ -36,6 +39,19 @@
   -webkit-line-clamp: 3; /* number of lines to show */
   line-clamp: 3;
   -webkit-box-orient: vertical;
+}
+
+.editBtn {
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  padding: 0.5rem 1.2rem;
+  min-width: auto;
+  position: absolute;
+  bottom: -1.5rem;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 @media screen and (width >= 768px) {
