--- a/src/components/StoryModal/styles.module.css
+++ b/src/components/StoryModal/styles.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .navBtn {
@@ -95,7 +95,16 @@
 
 .description {
   font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: 0.8px;
   line-height: 1.3;
+}
+
+.description > span {
+  text-decoration: underline;
+}
+
+.hideOverflow {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -118,6 +127,7 @@
     max-width: 33.9rem;
     height: 60.6rem;
     border-radius: 1.5rem;
+    filter: drop-shadow(0px 4px 8px rgba(217, 217, 217, 0.3));
   }
 
   .wrapper {
