--- a/src/components/Story/storyGrid.module.css
+++ b/src/components/Story/storyGrid.module.css
@@ -21,7 +21,7 @@
   height: 16px;
   border-radius: 50%;
   display: block;
-  margin-block: auto;
+  margin-inline: auto;
   position: relative;
   background: hsl(0, 100%, 73%);
   box-sizing: border-box;
