--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,10 @@ button {
   cursor: pointer;
 }
 
+button:disabled {
+  background-color: inherit;
+}
+
 img[role="button"] svg[role="button"] {
   cursor: pointer;
 }
