--- a/src/components/AddForm/styles.module.css
+++ b/src/components/AddForm/styles.module.css
@@ -102,7 +102,8 @@
   color: var(--color-error);
   font-size: 1.4rem;
   font-weight: bold;
-  height: 70px;
+  min-height: 2rem;
+  max-height: 7rem;
   display: flex;
   justify-content: center;
   align-items: center;
