--- a/src/components/AddForm/styles.module.css
+++ b/src/components/AddForm/styles.module.css
@@ -4,7 +4,14 @@
 }
 
 .content {
-  composes: content from "../AuthForm/styles.module.css";
+  /* composes: content from "../AuthForm/styles.module.css"; */
+  background-color: var(--color-background);
+  border-radius: 1.6rem;
+  width: 30rem;
+  height: 48rem;
+  padding: 2rem;
+  display: grid;
+  place-items: center;
   grid-template-rows: auto min-content auto 1fr;
   position: relative;
   height: fit-content;
@@ -64,7 +71,6 @@
 }
 
 .modalForm {
-  composes: modalForm from "../AuthForm/styles.module.css";
   justify-items: start;
 }
 
@@ -158,7 +164,10 @@
   }
 
   .modalForm {
-    gap: 2.5rem;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    row-gap: 2.5rem;
+    column-gap: 8rem;
     margin-inline: 1rem;
     margin-top: 1rem;
   }
