--- a/src/components/AuthForm/styles.module.css
+++ b/src/components/AuthForm/styles.module.css
@@ -10,7 +10,7 @@
   padding: 2rem;
   place-items: center;
   display: grid;
-  grid-template-rows: min-content min-content 1fr 70px 1fr;
+  grid-template-rows: min-content min-content 1fr auto 1fr;
 }
 
 .content > img {
@@ -45,7 +45,7 @@
   color: var(--color-error);
   font-size: 1.4rem;
   font-weight: bold;
-  height: 70px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
