--- a/src/components/Story/storyGrid.module.css
+++ b/src/components/Story/storyGrid.module.css
@@ -3,6 +3,7 @@
   gap: 2.5rem;
   width: 100%;
   max-width: 1600px;
+  justify-content: center;
 }
 
 .noStories {
@@ -44,6 +45,7 @@
     margin-top: 5rem;
   }
   .storiesWrapper {
+    justify-content: start;
     grid-template-columns: repeat(2, 1fr);
     gap: 3rem;
   }
