--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -65,7 +65,7 @@
   justify-content: center;
   align-items: center;
   gap: 4rem;
-  min-height: 300px;
+  min-height: 42.1rem;
   padding-block: 1rem 5rem;
   background-color: var(--color-background);
   box-shadow: 0px 14px 9px -11px rgba(70, 68, 68, 1);
@@ -85,6 +85,8 @@
   position: absolute;
   display: none;
   place-items: center;
+  width: 25.1rem;
+  height: 17ren;
   gap: 1rem;
   padding: 2rem;
   background-color: white;
@@ -101,6 +103,7 @@
 .grid {
   display: grid;
 }
+
 @media screen and (width >= 768px) {
   .header {
     display: flex;
